src/SIL.XForge.Scripture/ClientApp/src/app/shared/book-chapter-chooser/book-chapter-chooser.component.scss
:host {
  display: flex;
}

// Unfortunately there doesn't appear to be a good way to style a mat-select
// These styles were written by inspecting the elements using developer and then adding rules until it looked right
#chapter-select ::ng-deep,
#book-select ::ng-deep {
  .mat-form-field-wrapper {
    margin: 0;
    padding-bottom: 0;
    .mat-form-field-flex {
      padding-top: 0;
    }
    .mat-form-field-flex:not(:hover) {
      background-color: transparent;
    }
  }
  .mat-form-field-underline {
    display: none;
  }
  .mat-select-arrow-wrapper {
    transform: unset;
  }
  .mat-form-field-infix {
    // It appeared there was a transparent border being used as padding
    border-top-width: 0;
    padding-top: 12px;
    padding-bottom: 10px;
  }
  .mat-form-field-infix {
    width: initial;
  }
}

::ng-deep .mat-select-panel {
  &.book-select-menu,
  &.chapter-select-menu {
    max-height: 85vh;
  }
}

::ng-deep {
  #book-select .mat-form-field-outline-end,
  #chapter-select .mat-form-field-outline-start {
    border-radius: 0;
  }
}

